--- a/main.tex
+++ b/main.tex
@@ -18,16 +18,18 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
-\title{Motion simulation of unmanned surface vehicle in irregular sea}
+\title{Motion simulation of autonomous surface vehicle in irregular sea using
+frequency domain analysis}
 %\author{Toby Thomas \small{(CEng, MBCS, MRINA)}}
 %\date{\today}
 
 \begin{document}
-%\maketitle
+\maketitle
 
 \input{FrequencyDomainAnalysis.tex}
 
 \bibliographystyle{ieeetr}
 \bibliography{reference}
 
+\listoftodos
 \end{document}
