--- a/reference.bib
+++ b/reference.bib
@@ -6,7 +6,7 @@
 }
 
 @article{lewis1988principles,
-  title={Principles of naval architecture second revision},
+  title={Principles of naval architecture second revision, Volume III},
   author={Lewis, Edward V},
   journal={Jersey: SNAME},
   year={1988}
