Restructured the contents into different files.

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@ frequency domain analysis}
 \begin{document}
 \maketitle
 
-\input{FrequencyDomainAnalysis.tex}
+\input{waves.tex}
 
 \bibliographystyle{ieeetr}
 \bibliography{reference}
