Renamed file Introduction.tex to introduction.tex. Main.tex modified not to show document titles. waves.tex modified.

--- a/main.tex
+++ b/main.tex
@@ -18,13 +18,13 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
-\title{Motion simulation of autonomous surface vehicle in irregular sea using
-frequency domain analysis}
+%\title{Motion simulation of autonomous surface vehicle in irregular sea using
+%frequency domain analysis}
 %\author{Toby Thomas \small{(CEng, MBCS, MRINA)}}
 %\date{\today}
 
 \begin{document}
-\maketitle
+%\maketitle
 
 \input{waves.tex}
 
