--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,10 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
+% Path to images directory
+\graphicspath{{images/}}
+
+
 %\title{Motion simulation of autonomous surface vehicle in irregular sea using
 %frequency domain analysis}
 %\author{Toby Thomas \small{(CEng, MBCS, MRINA)}}
@@ -28,8 +32,8 @@
 
 \input{waves.tex}
 
-\bibliographystyle{ieeetr}
-\bibliography{reference}
+%\bibliographystyle{ieeetr}
+%\bibliography{reference}
 
-\listoftodos
+%\listoftodos
 \end{document}
