Completed waves theory. Next waves simulation.

--- a/reference.bib
+++ b/reference.bib
@@ -17,3 +17,19 @@
   author={Hughes, Owen F and Paik, Jeom Kee},
   year={2010}
 }
+
+@article{stansberg2002specialist,
+  title={The specialist committee on waves final report and recommendations to the 23rd ITTC},
+  author={Stansberg, CT and Contento, G and Hong, S Won and Irani, M and Ishida, S and Mercier, R and Wang, Y and Wolfram, J and Chaplin, J and Kriebel, D},
+  journal={Proceedings of the 23rd ITTC},
+  volume={2},
+  pages={505--551},
+  year={2002}
+}
+
+@article{dnv2014recommended,
+  title={Recommended Practice DNV-RP-H103, Modelling and Analysis of Marine Operations},
+  author={DNV, February},
+  journal={Det Norske Veritas},
+  year={2014}
+}
