--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 
 %% Useful packages
 \usepackage{amsmath}
+\usepackage{xfrac}
 \usepackage{graphicx}
 %\usepackage{apacite}
 \usepackage[colorinlistoftodos]{todonotes}
@@ -32,8 +33,8 @@
 
 \input{waves.tex}
 
-%\bibliographystyle{ieeetr}
-%\bibliography{reference}
+\bibliographystyle{ieeetr}
+\bibliography{reference}
 
 %\listoftodos
 \end{document}
