Renamed file waves.tex to waves_theory.tex and regenerated the pdf.

--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 \begin{document}
 %\maketitle
 
-\input{waves.tex}
+\input{waves_theory.tex}
 
 \bibliographystyle{ieeetr}
 \bibliography{reference}
